update tests to prefer Collections.emptyMap/singletonMap over Map.of