@@ -33,7 +33,7 @@ public class AWSPropagationCodecTest {
 
     @Test
     public void GIVEN_amEmptyParameter_EXPECT_anEmptyContext() {
-        final PropagationContext context = codec.decode(Map.of("", ""));
+        final PropagationContext context = codec.decode(Collections.singletonMap("", ""));
 
         assertThat(context).isEqualTo(PropagationContext.emptyContext());
     }
@@ -41,7 +41,7 @@ public class AWSPropagationCodecTest {
     @Test
     public void GIVEN_aValidTraceValue_EXPECT_toDecodeCorrectly() {
         final String traceHeader = "root=123;parent=abc;foo=bar;userId=123;toRetry=true";
-        final PropagationContext context = codec.decode(Map.of(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
 
         assertThat(context.getTraceId()).isEqualTo("123");
         assertThat(context.getSpanId()).isEqualTo("abc");
@@ -54,7 +54,7 @@ public class AWSPropagationCodecTest {
     @Test
     public void GIVEN_aValidTraceValueWithSelf_EXPECT_toDecodeCorrectly() {
         final String traceHeader = "root=123;self=abc;foo=bar;userId=123;toRetry=true";
-        final PropagationContext context = codec.decode(Map.of(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
 
         assertThat(context.getTraceId()).isEqualTo("123");
         assertThat(context.getSpanId()).isEqualTo("abc");
@@ -67,7 +67,7 @@ public class AWSPropagationCodecTest {
     @Test
     public void GIVEN_aValidTraceValueWithMixedCasing_EXPECT_toDecodeCorrectly() {
         final String traceHeader = "rOoT=123;PaReNt=abc;foo=bar;userId=123;toRetry=true";
-        final PropagationContext context = codec.decode(Map.of(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
 
         assertThat(context.getTraceId()).isEqualTo("123");
         assertThat(context.getSpanId()).isEqualTo("abc");
@@ -80,7 +80,7 @@ public class AWSPropagationCodecTest {
     @Test
     public void GIVEN_aValidTraceValueWithSelfAndMixedCasing_EXPECT_toDecodeCorrectly() {
         final String traceHeader = "rOoT=123;sElF=abc;foo=bar;userId=123;toRetry=true";
-        final PropagationContext context = codec.decode(Map.of(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
 
         assertThat(context.getTraceId()).isEqualTo("123");
         assertThat(context.getSpanId()).isEqualTo("abc");
@@ -93,7 +93,7 @@ public class AWSPropagationCodecTest {
     @Test
     public void GIVEN_aTraceHeaderWhereKVsareInReverseOrder_EXPECT_toDecodeCorrectly() {
         final String traceHeader = "foo=bar;userId=123;toRetry=true;parent=abc;root=123";
-        final PropagationContext context = codec.decode(Map.of(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
 
         assertThat(context.getTraceId()).isEqualTo("123");
         assertThat(context.getSpanId()).isEqualTo("abc");
@@ -106,7 +106,7 @@ public class AWSPropagationCodecTest {
     @Test
     public void GIVEN_aTraceHeaderWithSelfParentRoot_EXPECT_toDecodeCorrectlyWithLastValueWins() {
         final String traceHeader = "root=123;parent=abc;self=baz";
-        final PropagationContext context = codec.decode(Map.of(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
 
         assertThat(context.getTraceId()).isEqualTo("123");
         assertThat(context.getSpanId()).isEqualTo("baz");
@@ -116,7 +116,7 @@ public class AWSPropagationCodecTest {
     @Test
     public void GIVEN_aTraceHeaderWithSelfRootParent_EXPECT_toDecodeCorrectlyWithLastValueWins() {
         final String traceHeader = "root=123;self=baz;parent=abc;";
-        final PropagationContext context = codec.decode(Map.of(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
 
         assertThat(context.getTraceId()).isEqualTo("123");
         assertThat(context.getSpanId()).isEqualTo("abc");
@@ -126,7 +126,7 @@ public class AWSPropagationCodecTest {
     @Test
     public void GIVEN_aTraceHeaderWithoutParentOrSelf_EXPECT_toDecodeCorrectlySpanIdAsTraceId() {
         final String traceHeader = "root=123";
-        final PropagationContext context = codec.decode(Map.of(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(AWSPropagationCodec.AWS_TRACE_HEADER, traceHeader));
 
         assertThat(context.getTraceId()).isEqualTo("123");
         assertThat(context.getSpanId()).isEqualTo("123");
@@ -145,6 +145,6 @@ public class AWSPropagationCodecTest {
     public void GIVEN_aPopulatedContext_EXPECT_aValidHeaderValue() {
         final Map<String, String> encoded = codec.encode(new PropagationContext("123", "abc", null, Collections.singletonMap("test", "value"))).get();
 
-        assertThat(encoded).isEqualTo(Map.of(AWSPropagationCodec.AWS_TRACE_HEADER, "root=123;parent=abc;test=value"));
+        assertThat(encoded).isEqualTo(Collections.singletonMap(AWSPropagationCodec.AWS_TRACE_HEADER, "root=123;parent=abc;test=value"));
     }
 }
