@@ -9,6 +9,7 @@ import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
@@ -50,8 +51,8 @@ public class HttpServerPropagatorTest {
     @Test
     public void whenStartPropagation_traceIsStarted_andHttpFieldsAreApplied() {
         final String expectedTraceHeader = "expectedTraceHeader";
-        when(mockHttpRequest.getHeaders()).thenReturn(Map.of(HttpHeaderV1PropagationCodec.HONEYCOMB_TRACE_HEADER, expectedTraceHeader));
-        when(mockPropagationCodec.decode(Map.of(HttpHeaderV1PropagationCodec.HONEYCOMB_TRACE_HEADER, expectedTraceHeader))).thenReturn(mockPropagationContext);
+        when(mockHttpRequest.getHeaders()).thenReturn(Collections.singletonMap(HttpHeaderV1PropagationCodec.HONEYCOMB_TRACE_HEADER, expectedTraceHeader));
+        when(mockPropagationCodec.decode(Collections.singletonMap(HttpHeaderV1PropagationCodec.HONEYCOMB_TRACE_HEADER, expectedTraceHeader))).thenReturn(mockPropagationContext);
         when(mockBeeline.startTrace(EXPECTED_SPAN_NAME, mockPropagationContext, EXPECTED_SERVICE_NAME)).thenReturn(mockSpan);
 
         final Span span = httpServerPropagator.startPropagation(mockHttpRequest);
@@ -60,7 +61,7 @@ public class HttpServerPropagatorTest {
 
     @Test
     public void whenStartPropagation_andNoTraceHeaderIsPresent_traceIsStarted_andHttpFieldsAreApplied() {
-        when(mockPropagationCodec.decode(Map.of())).thenReturn(mockPropagationContext);
+        when(mockPropagationCodec.decode(Collections.emptyMap())).thenReturn(mockPropagationContext);
         when(mockBeeline.startTrace(EXPECTED_SPAN_NAME, mockPropagationContext, EXPECTED_SERVICE_NAME)).thenReturn(mockSpan);
 
         final Span span = httpServerPropagator.startPropagation(mockHttpRequest);
