@@ -5,6 +5,7 @@ import org.junit.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 
@@ -28,7 +29,7 @@ public class W3CPropagationCodecTest {
 
     @Test
     public void GIVEN_amEmptyParameter_EXPECT_anEmptyContext() {
-        final PropagationContext context = codec.decode(Map.of(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, ""));
+        final PropagationContext context = codec.decode(Collections.singletonMap(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, ""));
 
         assertThat(context).isEqualTo(PropagationContext.emptyContext());
     }
@@ -36,7 +37,7 @@ public class W3CPropagationCodecTest {
     @Test
     public void GIVEN_aValidTraceValue_EXPECT_toDecodeCorrectly() {
         final String traceHeader = "00-4cbc8d50f02449e887e8bc2aa8020d26-ace1ecab581fc069-00";
-        final PropagationContext context = codec.decode(Map.of(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
 
         assertThat(context.getTraceId()).isEqualTo("4cbc8d50f02449e887e8bc2aa8020d26");
         assertThat(context.getSpanId()).isEqualTo("ace1ecab581fc069");
@@ -46,7 +47,7 @@ public class W3CPropagationCodecTest {
     @Test
     public void GIVEN_aValidTraceValueWithSampledTraceFlag_EXPECT_toDecodeCorrectly() {
         final String traceHeader = "00-4cbc8d50f02449e887e8bc2aa8020d26-ace1ecab581fc069-01";
-        final PropagationContext context = codec.decode(Map.of(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
 
         assertThat(context.getTraceId()).isEqualTo("4cbc8d50f02449e887e8bc2aa8020d26");
         assertThat(context.getSpanId()).isEqualTo("ace1ecab581fc069");
@@ -57,7 +58,7 @@ public class W3CPropagationCodecTest {
     public void GIVEN_aTraceHeaderTooFewSegments_EXPECT_anEmptyContext() {
         final String traceHeader = "1-2-3";
 
-        final PropagationContext context = codec.decode(Map.of(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
 
         assertThat(context).isEqualTo(PropagationContext.emptyContext());
     }
@@ -66,7 +67,7 @@ public class W3CPropagationCodecTest {
     public void GIVEN_aTraceHeaderTooManySegments_EXPECT_anEmptyContext() {
         final String traceHeader = "1-2-3-4-5";
 
-        final PropagationContext context = codec.decode(Map.of(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
 
         assertThat(context).isEqualTo(PropagationContext.emptyContext());
     }
@@ -76,7 +77,7 @@ public class W3CPropagationCodecTest {
     public void GIVEN_aTraceHeaderWithInvalidVersion_EXPECT_anEmptyContext() {
         final String traceHeader = "invalid-4cbc8d50f02449e887e8bc2aa8020d26-ace1ecab581fc069-00";
 
-        final PropagationContext context = codec.decode(Map.of(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
 
         assertThat(context).isEqualTo(PropagationContext.emptyContext());
     }
@@ -85,7 +86,7 @@ public class W3CPropagationCodecTest {
     public void GIVEN_aTraceHeaderWithInvalidTraceId_EXPECT_anEmptyContext() {
         final String traceHeader = "00-invalid-ace1ecab581fc069-00";
 
-        final PropagationContext context = codec.decode(Map.of(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
 
         assertThat(context).isEqualTo(PropagationContext.emptyContext());
     }
@@ -94,7 +95,7 @@ public class W3CPropagationCodecTest {
     public void GIVEN_aTraceHeaderWithInvalidSpanId_EXPECT_anEmptyContext() {
         final String traceHeader = "00-4cbc8d50f02449e887e8bc2aa8020d26-invalid-00";
 
-        final PropagationContext context = codec.decode(Map.of(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
 
         assertThat(context).isEqualTo(PropagationContext.emptyContext());
     }
@@ -103,7 +104,7 @@ public class W3CPropagationCodecTest {
     public void GIVEN_aTraceHeaderWithInvalidTraceFlags_EXPECT_anEmptyContext() {
         final String traceHeader = "00-4cbc8d50f02449e887e8bc2aa8020d26-ace1ecab581fc069-invalid";
 
-        final PropagationContext context = codec.decode(Map.of(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
+        final PropagationContext context = codec.decode(Collections.singletonMap(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, traceHeader));
 
         assertThat(context).isEqualTo(PropagationContext.emptyContext());
     }
@@ -124,7 +125,7 @@ public class W3CPropagationCodecTest {
         final Map<String, String> encoded = codec.encode(new PropagationContext(traceId, spanId, null, null)).get();
 
         assertThat(encoded).isEqualTo(
-            Map.of(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, String.join("-", "00", traceId, spanId, "00"))
+            Collections.singletonMap(W3CPropagationCodec.W3C_TRACEPARENT_HEADER, String.join("-", "00", traceId, spanId, "00"))
         );
     }
 }
